# Penumbra

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: pdf_to_markdown.py  pubmed_search.py
src/penumbra/: __init__.py  main.py
src/penumbra/pubmed/: __init__.py  api.py  cli.py  config.py  models.py  parser.py
src/utils/: pdf_md_converter.py
tests/: __init__.py  test_main.py
