[tool.poetry]
name = "penumbra"
version = "0.1.0"
description = "Penumbra project"
authors = ["OdinManiac <your.email@example.com>"]
readme = "README.md"
packages = [{include = "penumbra", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
loguru = "^0.7.2"
sentence-transformers = "^2.2.2"
qdrant-client = "^1.7.0"
pytest = "^7.4.0"
pydantic-ai = "^0.0.37"
python-dotenv = "^1.0.0"
docling = "^2.0.0"
biopython = "^1.83.0"
httpx = "^0.26.0"
aiofiles = "^23.2.1"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.3"
scholarly = "^1.7.11"
semanticscholar = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 